# liquid-metal

./: .env.example  .gitignore  .goreleaser.yml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEV.md  EDGE.md  FEATURES.md  README.md  RUNBOOK.md  Scratch.md  Taskfile.yml  docker-compose.yml  go.work  go.work.sum  release.toml
.github/workflows/: release.yml
cli/: go.mod  go.sum  main.go
cli/cmd/: deploy.go  deploy_test.go  init.go  login.go  logout.go  logs.go  project.go  restart.go  root.go  status.go  status_test.go  stop.go  whoami.go  workspace.go
crates/api/: Cargo.toml  build.rs
crates/api/src/: billing.rs  cert_manager.rs  certs.rs  envelope.rs  lib.rs  main.rs  migrations.rs  nats.rs  outbox.rs  quota.rs  rate_limit.rs  routes.rs  storage.rs  stripe.rs
crates/api/src/grpc/: auth.rs  mod.rs  project.rs  service.rs  user.rs  workspace.rs
crates/api/src/routes/: acme.rs  api_keys.rs  auth.rs  deployments.rs  domains.rs  env.rs  logs.rs  mod.rs  project_env.rs  projects.rs  scale.rs  services.rs  users.rs  workspaces.rs
crates/api/tests/: api.rs
crates/api/tests/common/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  config.rs  context.rs  docker.rs  machine.rs  main.rs  oidc.rs  output.rs  table.rs  toml_config.rs
crates/cli/src/commands/: deploy.rs  init.rs  invite.rs  login.rs  logout.rs  logs.rs  mod.rs  project.rs  restart.rs  status.rs  stop.rs  whoami.rs  workspace.rs
crates/cli/src/commands/auth/: login.rs  logout.rs  whoami.rs
crates/cli/src/commands/service/: build.rs  delete.rs  deploy.rs  deploys.rs  domains.rs  env.rs  logs.rs  mod.rs  open.rs  restart.rs  rollback.rs  scale.rs  status.rs  stop.rs
crates/common/: Cargo.toml
crates/common/src/: artifact.rs  config.rs  contract.rs  events.rs  features.rs  lib.rs  networking.rs  pricing.rs  vault.rs
crates/daemon/: Cargo.toml  DAEMON.md  build.rs
crates/daemon/src/: cgroup.rs  cilium.rs  cpu.rs  deprovision.rs  ebpf.rs  firecracker.rs  jailer.rs  lib.rs  main.rs  netlink.rs  provision.rs  rootfs.rs  run.rs  snapshot.rs  startup.rs  storage.rs  tc.rs  verify.rs  wake.rs  wasm.rs  wasm_http.rs
crates/daemon/src/tasks/: crash_watcher.rs  ebpf_audit.rs  health.rs  idle.rs  lag_monitor.rs  mod.rs  orphan_sweep.rs  pulse.rs  registry_sweep.rs  suspend.rs  usage.rs
crates/ebpf-programs/: Cargo.toml
crates/ebpf-programs/.cargo/: config.toml
crates/ebpf-programs/src/: main.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: cache.rs  db.rs  lib.rs  main.rs  router.rs  tls.rs
crates/web/: Cargo.toml
crates/web/src/: api_client.rs  error.rs  lib.rs  main.rs  session.rs
crates/web/src/routes/: public.rs
crates/web/static/css/: app.css
crates/web/templates/: base.html  error.html
crates/web/templates/public/: about.html  changelog.html  docs.html  help.html  plans.html  pricing.html  splash.html  status.html  templates.html
crates/web/templates/public/archive/: pricing.html  splash-binary-cascade.html  splash-dual-node.html  splash-vortex.html
deploy/cilium/: vm-isolation.yaml
infra/nomad/: api.nomad.hcl  daemon-liquid.nomad.hcl  daemon-metal.nomad.hcl  migrate.nomad.hcl  proxy.nomad.hcl  vault.nomad.hcl
infra/terraform/: backups.tf  dns.tf  main.tf  nodes.tf  outputs.tf  services.tf  terraform.tfvars.example
infra/terraform/templates/: cloud-init-db.yaml  cloud-init-gateway.yaml  cloud-init-liquid.yaml  cloud-init-metal.yaml  cloud-init-nat.yaml  cloud-init-node.yaml
migrations/: V10__invite_codes.sql  V11__fix_tier_default.sql  V12__oidc_rename.sql  V13__artifact_key.sql  V14__idle_timeout.sql  V15__node_heartbeats.sql  V16__outbox.sql  V17__drop_dead_schema.sql  V18__drop_log_tables.sql  V19__drop_node_heartbeats.sql  V1__platform.sql  V20__billing_plans.sql  V21__billing_credits.sql  V22__usage_events.sql  V23__suspended_status.sql  V24__vm_metadata.sql  V25__ledger_idempotency.sql  V26__outbox_autovacuum.sql  V27__service_env_vars.sql  V28__service_run_mode.sql  V29__domains_service_id.sql  V2__resource_quotas.sql  V30__deployments_history.sql  V31__api_keys.sql  V32__service_env_encryption.sql  V33__draining_status.sql  V34__domain_certs.sql  V35__provision_failure.sql  V36__missing_indexes.sql  V37__snapshot_key.sql  V38__usage_duration_ms.sql  V39__drop_envelope_encryption.sql  V3__node_tracking.sql  V40__per_service_billing.sql  V41__workspace_roles.sql  V42__query_indexes.sql  V43__billing_fixes.sql  V44__invoices.sql  V4__top_up_billing.sql  V5__security.sql  (+4 more)
proto/: buf.gen.yaml  buf.yaml
proto/liquidmetal/v1/: project.proto  service.proto  user.proto  workspace.proto
proto/platform/v1/: workspace.proto
web/: .air.toml  go.mod  go.sum
web/cmd/: main.go
web/cmd/web/: main.go
web/internal/auth/: auth.go
web/internal/config/: config.go
web/internal/handler/: app.go  auth.go  docs.go  handler.go  handler_test.go  liquid.go  metal.go  routes.go  splash.go
web/internal/mw/: htmx.go
web/internal/ui/components/: dashboard_layout.templ  dashboard_layout_templ.go  healthz_templ.go  layout.templ  layout_templ.go  project_layout.templ  project_layout_templ.go
web/internal/ui/docs/: secrets.md
web/internal/ui/docs/languages/: go.md  rust.md
web/internal/ui/pages/: about.templ  about_templ.go  account.templ  account_templ.go  app.templ  app_templ.go  billing.templ  billing_templ.go  changelog.templ  changelog_templ.go  dashboard.templ  dashboard_templ.go  docs.templ  docs_templ.go  liquid.templ  liquid_templ.go  metal.templ  metal_templ.go  new_workspace.templ  new_workspace_templ.go  pricing.templ  pricing_templ.go  project.templ  project_templ.go  settings.templ  settings_templ.go  splash.templ  splash_templ.go  template_detail.templ  template_detail_templ.go  templates.templ  templates_templ.go
web/internal/ui/pages/archive/: liquid.templ  liquid_templ.go  metal.templ  metal_templ.go  splash.templ  splash_templ.go
web/internal/ui/static/: input.css  styles.css
web/internal/ui/static/js/: splash.js
