[workspace]
members = [
    "crates/common",
    "crates/api",
    "crates/proxy",
    "crates/daemon",
]
resolver = "2"

[workspace.package]
edition = "2024"
version  = "0.1.0"

# ── Shared dependency versions ───────────────────────────────────────────────
[workspace.dependencies]
# Async runtime
tokio        = { version = "1.36", features = ["full"] }
# Error handling
anyhow       = "1.0"
thiserror    = "2.0"
# Serialization
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
toml         = "0.8"
# NATS JetStream
async-nats   = "0.33"
futures      = "0.3"
# Postgres
tokio-postgres   = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
# HTTP primitives
hyper          = { version = "1", features = ["client", "http1", "server"] }
hyper-util     = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
# Web framework
axum           = "0.8"
tower          = "0.5"
tower-http     = { version = "0.6", features = ["trace", "cors"] }
# Edge proxy
pingora        = { version = "0.7.0", features = ["proxy"] }
async-trait    = "0.1"
# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Utilities
uuid     = { version = "1", features = ["v4", "v7", "serde"] }
clap     = { version = "4", features = ["derive"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
sha2     = "0.10"
hex      = "0.4"
# Object Storage (S3-compatible — Vultr Object Storage)
aws-sdk-s3           = { version = "1", features = ["behavior-version-latest"] }
aws-config           = { version = "1", default-features = false, features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-smithy-runtime-api = "1"
# ConnectRPC / gRPC
tonic        = "0.14"
prost        = "0.14"
prost-types  = "0.14"
# Envelope encryption
aes-gcm      = { version = "0.10", features = ["aes"] }

# Linux-only (daemon crate)
[workspace.metadata]
# rtnetlink and libc are declared directly in daemon/Cargo.toml under
# [target.'cfg(target_os = "linux")'.dependencies] — they can't be shared
# via workspace.dependencies because the target cfg key isn't supported there.
