[workspace]
members = [
    "crates/common",
    "crates/api",
    "crates/web",
    "crates/proxy",
    "crates/daemon",
    "crates/cli",
]
exclude = [
    "crates/ebpf-programs",
]
resolver = "2"

[workspace.package]
edition = "2024"
version  = "0.1.0"

# ── Shared dependency versions ───────────────────────────────────────────────
[workspace.dependencies]
# Async runtime
tokio        = { version = "1.36", features = ["full"] }
# Error handling
anyhow       = "1.0"
thiserror    = "2.0"
# Serialization
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
toml         = "0.8"
# NATS JetStream
async-nats   = "0.33"
futures      = "0.3"
# Postgres
tokio-postgres   = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4", "runtime"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
# HTTP primitives
hyper          = { version = "1", features = ["client", "http1", "server"] }
hyper-util     = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
# Web framework
axum           = "0.8"
tower          = "0.5"
tower-http     = { version = "0.6", features = ["trace", "cors"] }
# Edge proxy
pingora        = { version = "0.7.0", features = ["proxy", "openssl"] }
instant-acme   = "0.7"
rcgen          = "0.13"
async-trait    = "0.1"
# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Metrics
metrics                    = "0.24"
metrics-exporter-prometheus = "0.16"
# Distributed tracing (OpenTelemetry)
opentelemetry         = { version = "0.28", features = ["trace"] }
opentelemetry_sdk     = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp    = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"
# Date/time
chrono       = { version = "0.4", features = ["serde"] }
# Utilities
uuid     = { version = "1", features = ["v4", "v7", "serde"] }
clap     = { version = "4", features = ["derive", "suggestions", "help", "env"] }
clap_complete = "4"
refinery = { version = "0.8", features = ["tokio-postgres"] }
sha2     = "0.10"
hex      = "0.4"
# Object Storage (S3-compatible — Vultr Object Storage)
aws-sdk-s3           = { version = "1", features = ["behavior-version-latest"] }
aws-config           = { version = "1", default-features = false, features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-smithy-runtime-api = "1"
# ConnectRPC / gRPC
tonic        = "0.14"
prost        = "0.14"
prost-types  = "0.14"
# Base64 encoding (Stripe, presigned URLs)
base64       = "0.22"
# HMAC (Stripe webhook signature verification)
hmac         = "0.12"
# Rate limiting
governor     = { version = "0.8", features = ["std"] }
# Constant-time comparison
subtle       = "2.6"
# OpenAPI documentation
utoipa       = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# DNS resolution (domain verification)
hickory-resolver = { version = "0.25", features = ["tokio", "system-config"] }
# Postgres TLS
tokio-postgres-rustls = "0.13"
rustls                = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile        = "2"

# cargo-dist release configuration
[workspace.metadata.dist]
cargo-dist-version = "0.22.1"
ci = "github"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
installers = ["shell", "powershell", "homebrew"]
# tap injected by CI
# Only the CLI binary is distributed — API/daemon/proxy are server-side
dist = false

# Wasmtime's Cranelift codegen is painfully slow in debug builds (~60s for a
# 7MB Go wasm binary). Optimise just these crates so `cargo run` dev cycles
# don't stall on wasm compilation.
[profile.dev.package.wasmtime]
opt-level = 2
[profile.dev.package.cranelift-codegen]
opt-level = 2

# Linux-only (daemon crate)
[workspace.metadata]
# rtnetlink and libc are declared directly in daemon/Cargo.toml under
# [target.'cfg(target_os = "linux")'.dependencies] — they can't be shared
# via workspace.dependencies because the target cfg key isn't supported there.
