[package]
name    = "api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "machinename-api"
path = "src/main.rs"

[dependencies]
common     = { path = "../common" }
tokio      = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
axum       = { workspace = true }
tower-http = { workspace = true }
async-nats = { workspace = true }
tokio-postgres   = { workspace = true }
deadpool-postgres = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
refinery           = { workspace = true }
