[package]
name    = "api"
version.workspace = true
edition.workspace = true

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "liquid-metal-api"
path = "src/main.rs"

[dependencies]
common     = { path = "../common" }
tokio      = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
axum       = { workspace = true }
tower-http = { workspace = true }
async-nats = { workspace = true }
tokio-postgres   = { workspace = true }
deadpool-postgres = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
refinery           = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }
aws-sdk-s3           = { workspace = true }
aws-config           = { workspace = true }
aws-credential-types = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
tonic              = { workspace = true }
tonic-prost        = "0.14"
prost              = { workspace = true }
prost-types        = { workspace = true }
aes-gcm            = { workspace = true }
async-trait        = { workspace = true }
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tower          = { workspace = true }
http-body-util = { workspace = true }
serde_json     = { workspace = true }
uuid           = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"
