[package]
name    = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "plat"
path = "src/main.rs"

[dependencies]
common     = { path = "../common" }
tokio      = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
clap       = { workspace = true }
hyper          = { workspace = true }
hyper-util     = { workspace = true }
http-body-util = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
