[package]
name = "cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "flux"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
common     = { path = "../common" }
clap          = { workspace = true }
clap_complete = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml       = { workspace = true }
anyhow     = { workspace = true }
tokio      = { workspace = true }
uuid       = { workspace = true }
dirs       = "5"
reqwest    = { version = "0.12", features = ["json", "stream"] }
sha2       = { workspace = true }
tokio-util = { workspace = true }
futures    = { workspace = true }
open       = "5"
getrandom  = "0.2"
