[package]
name    = "common"
version.workspace = true
edition.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
sha2       = { workspace = true }
tokio      = { workspace = true }
async-nats            = { workspace = true }
tokio-postgres        = { workspace = true }
tokio-postgres-rustls = { workspace = true }
rustls                = { workspace = true }
rustls-pemfile        = { workspace = true }
utoipa                = { workspace = true }
tracing-subscriber    = { workspace = true }
opentelemetry         = { workspace = true }
opentelemetry_sdk     = { workspace = true }
opentelemetry-otlp    = { workspace = true }
tracing-opentelemetry = { workspace = true }
