[package]
name    = "daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "machinename-daemon"
path = "src/main.rs"

[dependencies]
common     = { path = "../common" }
tokio      = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
async-nats = { workspace = true }
futures    = { workspace = true }
hyper          = { workspace = true }
hyper-util     = { workspace = true }
http-body-util = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
# Wasm engine
wasmtime      = "29"
wasmtime-wasi = "29"

# Linux-only: TAP/bridge management
[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"
libc      = "0.2"
