[package]
name    = "proxy"
version.workspace = true
edition.workspace = true

[lib]
name = "proxy"
path = "src/lib.rs"

[[bin]]
name = "machinename-proxy"
path = "src/main.rs"

[dependencies]
common     = { path = "../common" }
tokio      = { workspace = true }
anyhow     = { workspace = true }
async-trait = { workspace = true }
pingora    = { workspace = true }
tokio-postgres    = { workspace = true }
deadpool-postgres  = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
