[package]
name    = "proxy"
version.workspace = true
edition.workspace = true

[lib]
name = "proxy"
path = "src/lib.rs"

[[bin]]
name = "machinename-proxy"
path = "src/main.rs"

[dependencies]
common     = { path = "../common" }
tokio      = { workspace = true }
anyhow     = { workspace = true }
async-trait = { workspace = true }
pingora    = { workspace = true }
tokio-postgres    = { workspace = true }
deadpool-postgres  = { workspace = true }
async-nats         = { workspace = true }
futures            = { workspace = true }
serde_json         = { workspace = true }
openssl            = { version = "0.10", features = ["v102", "v110"] }
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
