[package]
name    = "web"
version.workspace = true
edition.workspace = true

[lib]
name = "web"
path = "src/lib.rs"

[[bin]]
name = "liquid-metal-web"
path = "src/main.rs"

[dependencies]
common     = { path = "../common" }
tokio      = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
axum       = { workspace = true }
axum-extra = { version = "0.10", features = ["cookie-private"] }
tower      = { workspace = true }
tower-http = { workspace = true, features = ["trace", "fs"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls             = { workspace = true }
sha2               = { workspace = true }
askama             = "0.12"
rand               = "0.9"
base64             = "0.22"
url                = "2"
hex                = { workspace = true }
